# desbordante-core

./: .gitignore  CMakeLists.txt  README.md  README_PYPI.md  build.sh  input_data  pyproject.toml
.github/composite-actions/download-library/: action.yml
.github/workflows/: bindings-tests.yml  check-codestyle.yml  core-tests.yml  wheel.yml
src/core/: CMakeLists.txt
src/core/algorithms/dd/split/: split.cpp
src/core/algorithms/fd/dynfd/: dynfd.cpp  dynfd.h
src/core/algorithms/fd/dynfd/model/: compressed_column_data.cpp  compressed_column_data.h  dynamic_position_list_index.cpp  dynamic_position_list_index.h  dynamic_relation_data.cpp  dynamic_relation_data.h  fd_tree.cpp  fd_tree.h  fd_tree_vertex.cpp  fd_tree_vertex.h  non_fd_tree_vertex.cpp  non_fd_tree_vertex.h
src/core/algorithms/fd/fdhits/: config.h  edgemark.cpp  edgemark.h  fdhits.cpp  fdhits.cpp.bak  fdhits.h  fdhits_validate.cpp  hypergraph.cpp  hypergraph.h  pli_table.h  result_collector.cpp  result_collector.h  tree_search.cpp  tree_search.cpp.bak  tree_search.h
src/core/algorithms/fd/hycommon/: validator_helpers.cpp
src/core/algorithms/fd/hyfd/: hyfd.cpp  hyfd.h  inductor.h  sampler.h  validator.cpp  validator.h
src/core/algorithms/fd/sfd/: sample.h
src/core/algorithms/md/hymd/preprocessing/ccv_id_pickers/: index_uniform.h
src/core/algorithms/od/order/: order_utility.cpp
src/core/model/FDTrees/: fd_tree.cpp  fd_tree.h  fd_tree_vertex.cpp  fd_tree_vertex.h
src/core/model/table/: column_domain.cpp
src/python_bindings/: CMakeLists.txt
src/tests/: CMakeLists.txt  all_csv_configs.cpp  all_csv_configs.h  test_util.cpp
(+2 files in other folders)
